21) init.d: add support wlan2vlan over LAN/WAN bridges.<br>
22) init.d: rename LANVlans to VlanLan and LANVlansIsolate to VlanLanIsolate variables, for name consistent.<br>
23) kernel: ralink_arch: rework memautodetect in mt7621 case.<br>
24) kernel: ralink_nvram: make nvram driver SMP safe.<br>
25) kernel: ralink_gpio: fix mt7621 gpio disable interrupts.<br>
26) kernel: ralink_wifi: sync with mt7612e_20160219 version driver.<br>
27) kernel: ralink_wifi: tune band steering timeouts (fix very long time wait connect at one band clients).<br>
28) kernel: ralink_wifi: mt7620 driver fix build band steering support.<br>
29) kernel: ralink_wifi: backport band_steering support from mt76x2 driver to mt7620 and mt7610 drivers.<br>
30) kernel: mips: highmem: turn flush_cache_kmaps into a no-op.<br>
31) kernel: mips: fix use highmem without long calls.<br>
32) kernel: mips: rework core number correction.<br>
33) kernel: mips: fix 64k page support for 32 bit kernels.<br>
34) kernel: mips: fix FPU disable with preemption.<br>
35) kernel: mips: remove memset/memcpy prefetch hack (may be not safe in SMP).<br>
36) kernel: math-emu: fix floating-point to integer unsigned saturation.<br>
37) kernel: math-emu: fix floating-point to integer overflow detection.<br>
38) kernel: net: pppoe: fix reference counting in PPPoE proxy.<br>
39) kernel: net: af_unix: don't set err in unix_stream_read_generic unless there was an error.<br>
40) kernel: net: af_unix: guard against other == sk in unix_dgram_sendmsg.<br>
41) kernel: net: socket: get_empty_filp()/alloc_file() leave both ->f_pos and ->f_version zero.<br>
42) kernel: net: socket: sock_close() couldn't have been called with NULL inode since at least 2.1.early.<br>
43) kernel: net: socket: use SYSCALL_DEFINEx for sys_recv.<br>
44) kernel: net: vlan: turn on unicast filtering on vlan device.<br>
45) kernel: net: ipv4: only create late gso-skb if skb is already set up with CHECKSUM_PARTIAL.<br>
<br>
<br>
<br>