@@ -1783,6 +1783,7 @@
 43) kernel: net: socket: use SYSCALL_DEFINEx for sys_recv.<br>
 44) kernel: net: vlan: turn on unicast filtering on vlan device.<br>
 45) kernel: net: ipv4: only create late gso-skb if skb is already set up with CHECKSUM_PARTIAL.<br>
+46) kernel: kernel-wide: fix missing validations on __get/__put/__copy_to/__copy_from_user().<br>
 <br>
 <br>
 <br>
